@@ -40,18 +40,8 @@ AC_LANG_CPLUSPLUS
 AC_REQUIRE_CPP
 
 SDL_VERSION=1.2.0
-AM_PATH_SDL($SDL_VERSION, [
-    CPPFLAGS="$CPPFLAGS $SDL_CFLAGS"
-    LIBS="$LIBS $SDL_LIBS"
-],
-[
-    AC_MSG_ERROR(Could not find SDL. Please try your distribution vendor, or go to http://www.libsdl.org/ and get at least version $SDL_VERSION)
-])
-
-
-AC_CHECK_LIB(SDL_image,IMG_Load, [ LIBS="$LIBS -lSDL_image" ],
-    AC_MSG_ERROR(Could not find SDL_image library)
-)
+WF_CHECK_SDL_IMAGE($SDL_VERSION)
+dnl add flags later so we don't cause issues with SDL_main
 
 AC_CHECK_LIB(GL,OSMesaCreateContext, ,
     [
@@ -70,6 +60,9 @@ AC_CHECK_LIB(Xmu, XmuLookupStandardColormap)
 AC_CHECK_LIB(glut,glutInit, [ LIBS="$LIBS -lglut" ],
     AC_MSG_ERROR(Could not find glut library)
 )
+
+CXXFLAGS="$CXXFLAGS $WF_SDL_IMAGE_CFLAGS"
+LIBS="$LIBS $WF_SDL_IMAGE_LIBS"
 
 dnl Generate files
 
